do some figure placement

--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-05 13:31:49 -0400 
+%% Created for Vijay at 2011-08-11 16:58:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,18 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{wanderley2004,
+	Author = {Marcelo Mortensen Wanderley and Philippe Depalle},
+	Date-Added = {2011-08-11 16:56:39 -0400},
+	Date-Modified = {2011-08-11 16:58:39 -0400},
+	Journal = {Proceedings of the IEEE},
+	Month = {April},
+	Number = {4},
+	Pages = {632-644},
+	Title = {Gestural Control of Sound Synthesis},
+	Volume = {92},
+	Year = {2004}}
 
 @book{tuft2001,
 	Address = {Cheshire, Connecticut},
