--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -128,6 +128,7 @@ Thesis regulations require that contributions by others in the collection of
 
 %========== Appendices
 \appendix
+\include{definitions}
 
 %==========
 \begin{comment}
